--- a/Notebooks2023/Fine_tune_Mistral_7b_model_with_DPO.ipynb
+++ b/Notebooks2023/Fine_tune_Mistral_7b_model_with_DPO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100",
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -377,11 +377,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Fine-tune a Mistral-7b model with DPO\n",
+        "Created: 10 Feb 2024  \n",
         "\n",
-        "> 🗣️ [Large Language Model Course](https://github.com/mlabonne/llm-course)\n",
+        "Aaron, Frank, Othniel, Kennedy, Israel, Vishnu.\n",
         "\n",
-        "❤️ Created by [@maximelabonne](https://twitter.com/maximelabonne)."
+        "Modification History: This is Try-2: Created to use colab with funetuning after Crash'N'Burn of Argilla_Supervised_Finetuning-v1.ipynb.\n",
+        "\n",
+        "Description:\n",
+        "\n",
+        "This notebook pulls the dataset from remote argilla and applies it for DPO based Finetuning based on annotated data.\n",
+        "\n",
+        "Prerequisites:\n",
+        "\n",
+        "the following notebooks are already run:\n",
+        "\n",
+        "0. Create the raw dataset in HF hub.\n",
+        "\n",
+        "1. Manually create a HF spaces deployment of Argilla\n",
+        "\n",
+        "2. Configure the argilla dataset\n",
+        "\n",
+        "2. add records in the argilla dataset from the raw dataset\n",
+        "\n",
+        "3. annotated the dataset in UI\n",
+        "\n",
+        "and finally here we do -- Pull from argilla and apply the annotated data for Supervised Finetuning with DPO.\n",
+        "\n",
+        "**Crash'N'Burn**: Not yet 😸."
       ],
       "metadata": {
         "id": "Pa8905-YsHAn"
@@ -389,14 +411,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "_zIBL8IssExG"
       },
       "outputs": [],
       "source": [
-        "!pip install -q datasets trl peft bitsandbytes sentencepiece wandb"
+        "!pip install -q datasets trl peft"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -q bitsandbytes sentencepiece wandb"
+      ],
+      "metadata": {
+        "id": "gejxhN56sgbL"
+      },
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -415,29 +448,27 @@
         "import wandb\n",
         "\n",
         "# Defined in the secrets tab in Google Colab\n",
-        "hf_token = userdata.get('huggingface')\n",
+        "hf_token = userdata.get('HF_TOKEN')\n",
         "wb_token = userdata.get('wandb')\n",
         "wandb.login(key=wb_token)\n",
         "\n",
-        "model_name = \"teknium/OpenHermes-2.5-Mistral-7B\"\n",
-        "new_model = \"NeuralHermes-2.5-Mistral-7B\""
+        "model_name = \"mistralai/Mistral-7B-v0.1\"\n",
+        "new_model = \"ITU-BuildaThon-Mistral-7B\""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YpdkZsMNylvp",
-        "outputId": "6c2df234-1ce7-4cd2-a7e3-567e7536319f"
+        "outputId": "a4479edf-26a2-4986-f956-c4f63c4296ee"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/trl/trainer/ppo_config.py:141: UserWarning: The `optimize_cuda_cache` arguement will be deprecated soon, please use `optimize_device_cache` instead.\n",
-            "  warnings.warn(\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mmlabonne\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: W&B API key is configured. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
