--- a/Notebooks2023/3.Annotator_assignment.ipynb
+++ b/Notebooks2023/3.Annotator_assignment.ipynb
@@ -51,6 +51,12 @@
         "id": "fbc7acc7"
       },
       "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
         "## Install Libraries\n",
         "\n",
         "Install the latest version of Argilla in Colab, along with other libraries and models used in this notebook."
@@ -156,14 +162,14 @@
         "print(user)"
       ],
       "metadata": {
-        "id": "LULSBfe0SdK8",
-        "outputId": "d357a434-e882-4472-fa78-f1c0c83c5ae4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LULSBfe0SdK8",
+        "outputId": "e60b8f2a-d2ee-48c5-8126-d00d9f7d469f"
       },
       "id": "LULSBfe0SdK8",
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,22 +181,120 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Print the list of usernames with annotator permissions."
+      ],
+      "metadata": {
+        "id": "faU5bxREGmum"
+      },
+      "id": "faU5bxREGmum"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "users = [u for u in rg.User.list() if u.role == \"annotator\"]\n",
+        "print(\"Found \",len(users),\" users with Annotator permissions !!\")\n",
+        "for u in users:\n",
+        "  print(\"Deleting the annotator = \", u.username)\n",
+        "  u.delete()"
+      ],
+      "metadata": {
+        "id": "ykZLpqOJFL50",
+        "outputId": "faeb7c3c-da1a-4282-9eef-cfbe0d280b41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ykZLpqOJFL50",
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found  2  users with Annotator permissions !!\n",
+            "Deleting the annotator =  annotator1\n",
+            "Deleting the annotator =  annotator2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Create annotator-1,\n",
+        "\n",
+        "CAUTION - do this only if needed.\n",
+        "\n",
+        "CAUTION - Cannot have capital letters in the username."
+      ],
+      "metadata": {
+        "id": "4Xp9D223G07-"
+      },
+      "id": "4Xp9D223G07-"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user1=userdata.get('annotator1_username')\n",
+        "pass1=userdata.get('annotator1_password')\n",
+        "user = rg.User.create(\n",
+        "    username=user1,\n",
+        "    first_name=\"Annotator1\",\n",
+        "    last_name=\"Annotator1\",\n",
+        "    password=pass1,\n",
+        "    role=\"annotator\",\n",
+        "    workspaces=[\"admin\"]\n",
+        ")\n",
+        "print(user1)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G-UIFrmOSpQ2",
+        "outputId": "ec688f29-dd61-4daf-f53d-1ed94c8415f5"
+      },
+      "id": "G-UIFrmOSpQ2",
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "annotator1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Create annotator-2, CAUTION - do this only if needed."
+      ],
+      "metadata": {
+        "id": "prnJnaAoMsEq"
+      },
+      "id": "prnJnaAoMsEq"
+    },
+    {
       "cell_type": "code",
       "source": [
         "user = rg.User.create(\n",
-        "    username=\"ray\",\n",
-        "    first_name=\"Raymond\",\n",
-        "    last_name=\"Edibo\",\n",
-        "    password=\"Ray12345\",\n",
+        "    username=userdata.get('annotator2_username'),\n",
+        "    first_name=\"Annotator2\",\n",
+        "    last_name=\"Annotator2\",\n",
+        "    password=userdata.get('annotator2_password'),\n",
         "    role=\"annotator\",\n",
         "    workspaces=[\"admin\"]\n",
         ")"
       ],
       "metadata": {
-        "id": "G-UIFrmOSpQ2"
+        "id": "rYg2-2rmMoww"
       },
-      "id": "G-UIFrmOSpQ2",
-      "execution_count": 8,
+      "id": "rYg2-2rmMoww",
+      "execution_count": 45,
       "outputs": []
     },
     {
